# baxter_control_prl

./: README.md
baxter_control_prl/: CMakeLists.txt  package.xml
baxter_pick_place/: CMakeLists.txt  package.xml
baxter_pick_place/include/baxter_pick_place/: baxter_utilities.h
baxter_pick_place/launch/: baxter_control.launch  baxter_pick_and_place_demo_force_torque.launch  baxter_rviz.launch  block_pick_place.launch  rviz_kinect.rviz
baxter_pick_place/models/red_cube_5cm/: model.config  model.rsdf  model.sdf
baxter_pick_place/models/table_prl/: model.config  model.sdf
baxter_pick_place/scripts/: ik_pick_and_place_demo_force_torque.py  ik_pick_and_place_demo_force_torque_mod.py
baxter_pick_place/src/: baxter_control.cpp  baxter_utilities.cpp  block_pick_place.cpp
