<package>
  <name>baxter_pick_place</name>
  <version>0.3.0</version>
  <description>Code for running MoveIt pick and place</description>

  <maintainer email="vgirbes@idf.upv.es">Vicent Girbes Juan</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/sento86/baxter_pick_place/</url>
  <url type="bugtracker">https://github.com/sento86/baxter_pick_place/issues</url>
  <url type="repository">https://github.com/sento86/baxter_control_prl</url>

  <author>Vicent Girbes Juan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_grasps</build_depend>
  <build_depend>moveit_simple_grasps</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--<build_depend>baxter_control</build_depend>-->
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ompl</run_depend>
  <run_depend>moveit_ompl</run_depend>
  <run_depend>moveit_plugins</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>moveit_grasps</run_depend>
  <run_depend>moveit_simple_grasps</run_depend>

  <export>
  </export>
</package>
